--- a/WorkBook.ipynb
+++ b/WorkBook.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,12 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_ds = TensorDataset(X[:idxvalid], y[:idxvalid])\n",
-    "valid_ds = TensorDataset(X[idxvalid:], y[idxvalid:])"
+    "valid_ds = TensorDataset(X[idxvalid:], y[idxvalid:])\n",
+    "\n",
+    "# TOCHECK: should we move to an IterableDataset() instead? See https://pytorch.org/docs/stable/data.html"
    ]
   },
   {
