update code, start working on model

--- a/WorkBook.ipynb
+++ b/WorkBook.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +323,90 @@
     "valid_ds = TensorDataset(X[idxvalid:], y[idxvalid:])\n",
     "\n",
     "# TOCHECK: should we move to an IterableDataset() instead? See https://pytorch.org/docs/stable/data.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now create the DataLoaders\n",
+    "\n",
+    "bs = 64\n",
+    "\n",
+    "train_dl = DataLoader(train_ds, batch_size=bs, shuffle=False)\n",
+    "valid_dl = DataLoader(valid_ds, batch_size=bs, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = next(iter(train_dl))\n",
+    "\n",
+    "# TOCHECK: why is a a list and not a tensor??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 10, 1])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 2, 1])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's define some functions\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "def conv(ninputs, nfilters, kernel_size):\n",
+    "    return nn.Conv1d(ninputs, nfilters, kernel_size, padding=1, bias=True)\n",
+    "\n",
+    "def maxpool(filter_size):\n",
+    "    return nn.MaxPool1d(filter_size)\n",
+    "\n",
+    "def activation():\n",
+    "    return nn.ReLU()"
    ]
   },
   {
