Refactoring file loading and work on multivariate

--- a/WorkBook.ipynb
+++ b/WorkBook.ipynb
@@ -25,7 +25,10 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "import torch.nn as nn"
    ]
   },
   {
@@ -285,7 +288,6 @@
    "outputs": [],
    "source": [
     "# Let's move the data to a torch tensor\n",
-    "import torch\n",
     "X, y = torch.Tensor(X).float(), torch.Tensor(y).float()"
    ]
   },
@@ -309,16 +311,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import objects from pytorch for dataset and dataloader\n",
-    "from torch.utils.data import DataLoader, TensorDataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "train_ds = TensorDataset(X[:idxvalid], y[:idxvalid])\n",
     "valid_ds = TensorDataset(X[idxvalid:], y[idxvalid:])\n",
     "\n",
@@ -327,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +353,7 @@
        "torch.Size([64, 10, 1])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +373,7 @@
        "torch.Size([64, 2, 1])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,12 +384,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Let's define some functions\n",
-    "import torch.nn as nn\n",
     "\n",
     "def conv(ninputs, nfilters, kernel_size):\n",
     "    return nn.Conv1d(ninputs, nfilters, kernel_size, padding=1, bias=True)\n",
@@ -407,6 +398,45 @@
     "\n",
     "def activation():\n",
     "    return nn.ReLU()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 10, 1])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test with multivariate data\n",
+    "\n",
+    "def dataloading(path, filename):\n",
+    "    \"\"\" Returns a pandas dataframe from a data file\n",
+    "        Args:\n",
+    "            - path: a Path() object pointing to the directory containing the data\n",
+    "            - filename: a file name in CSV format located in the directory pointed \n",
+    "            to by the Path() object\n",
+    "    \"\"\"\n",
+    "    file = path / filename\n",
+    "    return pd.read_csv(file)"
    ]
   },
   {
