add code to notebook

--- a/WorkBook.ipynb
+++ b/WorkBook.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "torch.Size([64, 10, 1])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,21 +422,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test with multivariate data\n",
+    "# data loading routine that returns data from a CSV file (initially)\n",
     "\n",
-    "def dataloading(path, filename):\n",
+    "def dataloading(path, filename, filetype=\"CSV\"):\n",
     "    \"\"\" Returns a pandas dataframe from a data file\n",
     "        Args:\n",
     "            - path: a Path() object pointing to the directory containing the data\n",
     "            - filename: a file name in CSV format located in the directory pointed \n",
     "            to by the Path() object\n",
+    "            - filetype: specify the type of file to read from (at the moment, the\n",
+    "            only possibility is \"CSV\")\n",
     "    \"\"\"\n",
+    "    \n",
+    "    # TODO: we should raise exception here if filetype is not CSV\n",
+    "    \n",
     "    file = path / filename\n",
-    "    return pd.read_csv(file)"
+    "    if filetype == \"CSV\":\n",
+    "        return pd.read_csv(file)\n",
+    "    else:\n",
+    "        print('Only CSV file are supported at the moment.')\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creates our dependent and independent variables\n",
+    "\n",
+    "def createxandy(data, window, p_window, firstcolastime=True):\n",
+    "    \"\"\" Returns X and y as torch tensors to be used in our training and predictions\n",
+    "        Args:\n",
+    "            - data: loaded data in a pandas dataframe format\n",
+    "            - window: the length of each X item\n",
+    "            - p_window: the length of the prediction window (i.e. how many timesteps in the\n",
+    "            future we want to predict)\n",
+    "            - firstcolastime: whether our firstcolumn consists of timestamp (default to True)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if firstcolastime:\n",
+    "        data = data.iloc[:,1:].values\n",
+    "    \n",
+    "    N = len(data)\n",
+    "    \n",
+    "    # X will be a list of sequences of size window\n",
+    "    # y will be a list of sequences of size p_window, \n",
+    "    # immediately following the corresponding X\n",
+    "    \n",
+    "    X = []\n",
+    "    y = []\n",
+    "    \n",
+    "    # Total sequence to go over is N + 1 - window - p_window\n",
+    "    seq = N + 1 - window - p_window\n",
+    "    for i in range(seq):\n",
+    "        X_temp, y_temp = data[i:i+window], data[i+window:i+window+p_window]\n",
+    "        X.append(X_temp)\n",
+    "        y.append(y_temp)\n",
+    "        \n",
+    "    X, y = torch.Tensor(X).float(), torch.Tensor(y).float()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, let's create the datasets we need\n",
+    "\n",
+    "def createdataset(X, y, split=[0.7,0.3,0.0]):\n",
+    "    \"\"\" Returns a list of Dataset objects (for training, validation and testing)\n",
+    "        Args:\n",
+    "            - X: tensor containing independent variables\n",
+    "            - y: tensor containing dependent variables\n",
+    "            - split: list containing the split between training, validation \n",
+    "            and testing datasets (the total should add to 1.0)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # TODO: we should raise exception here\n",
+    "    assert sum(split) == 1.0\n",
+    "\n",
+    "    train_size, valid_size, _ = split\n",
+    "    \n",
+    "    N = len(X)\n",
+    "    \n",
+    "    trainidx = int(len(X) * train_size)\n",
+    "    valididx = int(len(X) * (train_size + valid_size))\n",
+    "    \n",
+    "    train_ds = TensorDataset(X[:trainidx], y[:trainidx])\n",
+    "    valid_ds = TensorDataset(X[trainidx:valididx], y[trainidx:valididx])\n",
+    "    test_ds = TensorDataset(X[valididx:testidx], y[valididx:testidx])\n",
+    "    \n",
+    "    return [train_ds, valid_ds, test_ds]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create the dataloaders\n",
+    "\n",
+    "def createdataloaders(datasets, bs=64):\n",
+    "    \"\"\" Create the dataloaders for all the datasets and returns a list of \n",
+    "        dataloaders.\n",
+    "        Args:\n",
+    "            - datasets: a list of Dataset objects in this order: training, \n",
+    "            validation, testing\n",
+    "            - bs: batch size (64 by default)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # TODO: ensure datasets is of the correct object type\n",
+    "    # TOCHECK: should we have shuffle=True or False for validation / testing?\n",
+    "    \n",
+    "    train_dl = DataLoader(datasets[0], batch_size=bs, shuffle=False)\n",
+    "    valid_dl = DataLoader(datasets[1], batch_size=bs, shuffle=True)\n",
+    "    test_dl = DataLoader(datasets[2], batch_size=bs, shuffle=True)\n",
+    "    \n",
+    "    return [train_dl, valid_dl, test_dl]"
    ]
   },
   {
