more stuff in the notebook

--- a/WorkBook.ipynb
+++ b/WorkBook.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,8 +393,8 @@
     "def conv(ninputs, nfilters, kernel_size):\n",
     "    return nn.Conv1d(ninputs, nfilters, kernel_size, padding=1, bias=True)\n",
     "\n",
-    "def maxpool(filter_size):\n",
-    "    return nn.MaxPool1d(filter_size)\n",
+    "def maxpool(filter_size, padding):\n",
+    "    return nn.MaxPool1d(filter_size, padding=padding)\n",
     "\n",
     "def activation():\n",
     "    return nn.ReLU()"
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,23 +450,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creates our dependent and independent variables\n",
     "\n",
-    "def createxandy(data, window, p_window, firstcolastime=True):\n",
+    "def createxandy(data, window, p_window, firstcolastimestamp=True):\n",
     "    \"\"\" Returns X and y as torch tensors to be used in our training and predictions\n",
     "        Args:\n",
     "            - data: loaded data in a pandas dataframe format\n",
     "            - window: the length of each X item\n",
     "            - p_window: the length of the prediction window (i.e. how many timesteps in the\n",
     "            future we want to predict)\n",
-    "            - firstcolastime: whether our firstcolumn consists of timestamp (default to True)\n",
+    "            - firstcolastimestamp: whether our firstcolumn consists of timestamp (default to True)\n",
     "    \"\"\"\n",
     "    \n",
-    "    if firstcolastime:\n",
+    "    if firstcolastimestamp:\n",
     "        data = data.iloc[:,1:].values\n",
     "    \n",
     "    N = len(data)\n",
@@ -475,8 +475,7 @@
     "    # y will be a list of sequences of size p_window, \n",
     "    # immediately following the corresponding X\n",
     "    \n",
-    "    X = []\n",
-    "    y = []\n",
+    "    X, y = [], []\n",
     "    \n",
     "    # Total sequence to go over is N + 1 - window - p_window\n",
     "    seq = N + 1 - window - p_window\n",
@@ -485,18 +484,20 @@
     "        X.append(X_temp)\n",
     "        y.append(y_temp)\n",
     "        \n",
-    "    X, y = torch.Tensor(X).float(), torch.Tensor(y).float()  "
+    "    X, y = torch.Tensor(X).float(), torch.Tensor(y).float()\n",
+    "    \n",
+    "    return X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now, let's create the datasets we need\n",
     "\n",
-    "def createdataset(X, y, split=[0.7,0.3,0.0]):\n",
+    "def createdatasets(X, y, split=[0.7,0.3,0.0]):\n",
     "    \"\"\" Returns a list of Dataset objects (for training, validation and testing)\n",
     "        Args:\n",
     "            - X: tensor containing independent variables\n",
@@ -506,7 +507,7 @@
     "    \"\"\"\n",
     "\n",
     "    # TODO: we should raise exception here\n",
-    "    assert sum(split) == 1.0\n",
+    "    assert sum(split) - 1.0 < 1e-10\n",
     "\n",
     "    train_size, valid_size, _ = split\n",
     "    \n",
@@ -515,16 +516,24 @@
     "    trainidx = int(len(X) * train_size)\n",
     "    valididx = int(len(X) * (train_size + valid_size))\n",
     "    \n",
+    "    # TODO: what if we don't want test / valid datasets? \n",
+    "    \n",
     "    train_ds = TensorDataset(X[:trainidx], y[:trainidx])\n",
-    "    valid_ds = TensorDataset(X[trainidx:valididx], y[trainidx:valididx])\n",
-    "    test_ds = TensorDataset(X[valididx:testidx], y[valididx:testidx])\n",
+    "    if valid_size == 0.0:\n",
+    "        valid_ds = False\n",
+    "    else:\n",
+    "        valid_ds = TensorDataset(X[trainidx:valididx], y[trainidx:valididx])\n",
+    "    if valid_size + train_size == 1.0:\n",
+    "        test_ds = False\n",
+    "    else:\n",
+    "        test_ds = TensorDataset(X[valididx:], y[valididx:])\n",
     "    \n",
     "    return [train_ds, valid_ds, test_ds]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +541,8 @@
     "\n",
     "def createdataloaders(datasets, bs=64):\n",
     "    \"\"\" Create the dataloaders for all the datasets and returns a list of \n",
-    "        dataloaders.\n",
+    "        dataloaders and/or False when no dataloaders can be created for a given \n",
+    "        dataset (for example when dataset is empty)\n",
     "        Args:\n",
     "            - datasets: a list of Dataset objects in this order: training, \n",
     "            validation, testing\n",
@@ -543,10 +553,60 @@
     "    # TOCHECK: should we have shuffle=True or False for validation / testing?\n",
     "    \n",
     "    train_dl = DataLoader(datasets[0], batch_size=bs, shuffle=False)\n",
-    "    valid_dl = DataLoader(datasets[1], batch_size=bs, shuffle=True)\n",
-    "    test_dl = DataLoader(datasets[2], batch_size=bs, shuffle=True)\n",
+    "    if datasets[1]:\n",
+    "        valid_dl = DataLoader(datasets[1], batch_size=bs, shuffle=True)\n",
+    "    else:\n",
+    "        valid_dl = False\n",
+    "    if datasets[2]:\n",
+    "        test_dl = DataLoader(datasets[2], batch_size=bs, shuffle=True)\n",
+    "    else:\n",
+    "        test_dl = False\n",
     "    \n",
     "    return [train_dl, valid_dl, test_dl]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create a model\n",
+    "n_filters = 32\n",
+    "kernel_size = 3\n",
+    "padding = 1\n",
+    "\n",
+    "model = nn.Sequential(conv(1, n_filters, kernel_size), activation(), \n",
+    "                      maxpool(kernel_size, padding), \n",
+    "                      conv(n_filters, n_filters, kernel_size), \n",
+    "                      activation(), maxpool(kernel_size, padding))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Conv1d(1, 32, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+       "  (1): ReLU()\n",
+       "  (2): MaxPool1d(kernel_size=3, stride=3, padding=1, dilation=1, ceil_mode=False)\n",
+       "  (3): Conv1d(32, 32, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+       "  (4): ReLU()\n",
+       "  (5): MaxPool1d(kernel_size=3, stride=3, padding=1, dilation=1, ceil_mode=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
    ]
   },
   {
