create model, but need to check how to use channels... Is this the number of time series or do we set it to 1?

--- a/WorkBook.ipynb
+++ b/WorkBook.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
     "kernel_size = 3\n",
     "padding = 1\n",
     "\n",
-    "model = nn.Sequential(conv(1, n_filters, kernel_size), activation(), \n",
+    "model = nn.Sequential(conv(2, n_filters, kernel_size), activation(), \n",
     "                      maxpool(kernel_size, padding), \n",
     "                      conv(n_filters, n_filters, kernel_size), \n",
     "                      activation(), maxpool(kernel_size, padding))"
@@ -584,14 +584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Sequential(\n",
-       "  (0): Conv1d(1, 32, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+       "  (0): Conv1d(2, 32, kernel_size=(3,), stride=(1,), padding=(1,))\n",
        "  (1): ReLU()\n",
        "  (2): MaxPool1d(kernel_size=3, stride=3, padding=1, dilation=1, ceil_mode=False)\n",
        "  (3): Conv1d(32, 32, kernel_size=(3,), stride=(1,), padding=(1,))\n",
@@ -600,13 +600,139 @@
        ")"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model"
+    "model\n",
+    "\n",
+    "# TODO: integrate nn.Linear() as part of the model (needs to define the dimensions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path('Data')\n",
+    "filename = 'data2.csv'\n",
+    "window = 10\n",
+    "p_window = 3\n",
+    "\n",
+    "data = dataloading(path, filename)\n",
+    "X, y = createxandy(data, window, p_window, firstcolastimestamp=True)\n",
+    "datasets = createdatasets(X, y, split=[0.7,0.3,0.0])\n",
+    "dataloaders = createdataloaders(datasets, bs=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xb, yb = next(iter(dataloaders[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 10, 2])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 3, 2])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = xb.permute(0,2,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 2, 10])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = model(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 32, 2])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.shape"
    ]
   },
   {
